deploy/kubernetes/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kube-image-inventory
  namespace: kube-image-inventory
spec:
  selector:
    app: kube-image-inventory
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
      name: http
